[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dejavu-claude"
version = "0.1.0"
description = "Claude Code session autopsy — surfaces repeated patterns and recommends CLAUDE.md / hook / wrapper additions."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Ashton Honnecke" }]
keywords = ["claude", "claude-code", "agent", "session-analysis", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities",
]
dependencies = []

[project.scripts]
dejavu = "dejavu:main"

[project.urls]
Homepage = "https://github.com/ahonnecke/dejavu"
Repository = "https://github.com/ahonnecke/dejavu"
Issues = "https://github.com/ahonnecke/dejavu/issues"

[project.optional-dependencies]
dev = ["pytest>=7", "build", "twine"]

[tool.setuptools]
py-modules = ["dejavu"]

[tool.pytest.ini_options]
testpaths = ["tests"]
